--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".DescActivity"></activity>
+        <activity android:name=".MedicineActivity"></activity>
         <receiver android:name=".MyReceiver" android:enabled="true" android:exported="true"></receiver>
     </application>
 
