--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,18 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,20 +33,35 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" android:singleUser="true">
+        <activity android:name=".MainActivity" android:singleUser="true" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DescActivity"></activity>
-        <activity android:name=".MedicineActivity"></activity>
-        <activity android:name=".InfoAct"></activity>
-        <activity android:name=".ConfigurePButtonActivity"></activity>
-        <activity android:name=".SearchDevicesActivity"></activity>
-        <receiver android:name=".Receiver.MyReceiver" android:enabled="true" android:exported="true"></receiver>
+        <activity android:name=".DescActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name=".MedicineActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name=".InfoAct" android:screenOrientation="portrait"></activity>
+        <activity android:name=".ConfigurePButtonActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name=".SearchDevicesActivity" android:screenOrientation="portrait"></activity>
+
         <receiver android:name=".Receiver.TaskReceiver" android:enabled="true" android:exported="true"></receiver>
+        <receiver
+            android:name=".recievers.SmsReciever"
+            android:enabled="true">
+            <intent-filter android:priority="1000">
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </receiver>
+
+        <!--<activity android:name=".configureButton" />-->
+
+        <service
+            android:name=".BeeperService"
+            android:exported="false"></service>
+
+
     </application>
 
 </manifest>
